# silicon

./: default.nix  flake.nix  hie.yaml  silicon.cabal
src/: Silicon.hs
src/Silicon/: BitArithmetic.hs  Bundle.hs  Domain.hs  Signal.hs
